2001-08-26  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-misc.c (soup_set_ssl_ca_file): impl.
	(soup_set_ssl_ca_dir): impl.
	(soup_set_ssl_cert_files): impl.

	* src/soup-core/soup-openssl.c (soup_openssl_init): Load cert
	authority files found in HTTPS_CA_DIR and HTTPS_CA_FILE.
	(soup_openssl_get_iochannel): Load certificate found in
	HTTPS_CERT_FILE and private key from file in
	HTTPS_KEY_FILE. Client certificates thanks to Scott Hutton
	(shutton@pobox.com).

2001-08-24  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-queue.c (soup_queue_connect_cb): Always
	regenerate req->priv->req_header.

	* src/soup-core/soup-ntlm.c (soup_ntlm_lanmanager_hash): pass 15
	byte buffer to work around array bounds read by setup_schedule.

	* src/soup-core/soup-message.c (authorize_handler): No need to
	free msg->priv->req_header as it is generated on each request now.
	(soup_message_set_request_header): Ditto.

	* src/soup-core/soup-auth.c (ntlm_auth): Only return
	auth->response one time. Subsequent calls return NULL.

	* src/soup-core/soup-queue.c (soup_encode_http_auth): Check for
	NULL auth response.

2001-08-23  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.c (ntlm_new): Fix under-allocation.
	(ntlm_parse): Comment out the NTLM host/domain parsing code, as it
	segfaults for some reason. Not that this matters as IIS seems to
	competely ignore these parts of the NTLM message :) There is also
	some memory corruption in soup-ntlm.c causing segfaults after the
	message-finished callback returns.

2001-08-23  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-auth.c (soup_auth_invalidates_prior): Add
	SoupAuth.compare_func and call this from here, to remove hardcoded
	auth scheme knowledge.
	(soup_auth_new_from_header): Iterate known_auth_schemes looking
	for a match with auth scheme supplied, instead of hardcoding known
	auth schemes.

2001-08-23  Alex Graveley  <alex@ximian.com>
